css/less/navigation.less
//
// Navigation
// @version 1.1.2
// @since 1.0
//

.navbar {

  .navbar-nav {

    &.nav-pills > li > a {
      padding: 12px 8px;
    }
  }

  .dropdown-menu {

    a {
      padding: 8px 15px;
      border-bottom: 1px solid #e4e4e4;
      color: #888;
    }

    li:last-child > a {
      border-bottom: 0;
    }

    > li a:hover, > li.active a:hover {
      background: none;
      color: #222;
    }

    .active > a {
      background: none;
      color: #222;
    }

    &.open .dropdown-toggle {
      background: none;
      color: #888;
    }

  }

}

